--- a/homework2/CMakeLists.txt
+++ b/homework2/CMakeLists.txt
@@ -1,16 +1,25 @@
 cmake_minimum_required(VERSION 2.6)
-project(homework0)
+project(homework2)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 # set(CMAKE_BUILD_TYPE Debug)
 
-find_library(GLUT_LIBRARY GLUT)
-find_library(OpenGL_LIBRARY OpenGL)
+# find opengl and glut
+find_package(OpenGL REQUIRED)
+if(NOT OPENGL_FOUND)
+    message(FATAL_ERROR "OPENGL not found!")
+endif(NOT OPENGL_FOUND)
+
+find_package(GLUT REQUIRED)
+if(NOT GLUT_FOUND)
+    message(FATAL_ERROR "GLUT not found!")
+endif(NOT GLUT_FOUND)
+
+include_directories(${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
 
 # Shelby Model
 include_directories(include)
 add_executable(shelby src/main.cc src/shelby.cc src/person.cc src/drawing_tools.cc)
-target_link_libraries(shelby ${OpenGL_LIBRARY} ${GLUT_LIBRARY})
-
+target_link_libraries(shelby ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
